--- a/src/styles.css
+++ b/src/styles.css
@@ -76,25 +76,20 @@ a {
 }
 
 .current-temp {
-  font-size: 48px;
+  display: flex;
 }
 
 .current-temp-emoji {
-  font-size: 40px;
-  margin-right: 10px;
-  position: relative;
-  top: -8px;
-  right: -8px;
+  width: 88px;
 }
 
 .current-temp-number {
-  font-size: 80px;
-  font-weight: bold;
+  font-size: 88px;
+  line-height: 88px;
+  font-weight: 700;
 }
 
 .current-temp-degree {
   font-size: 28px;
-  position: relative;
-  top: -38px;
-  left: -10px;
+  margin-top: 6px;
 }
